feat: ai training